import { UniqueEntityID } from "../../core/domain/UniqueEntityID";

export class AppointmentId extends UniqueEntityID {

}
